# bernini-comfy-standalone

./: .gitignore  AGENTIC_INSTALL_INSTRUCTIONS.md  README.md  README.txt  install.bat  run.bat
ComfyUI/custom_nodes/ComfyUI-RH-Bernini/: __init__.py
ComfyUI/custom_nodes/ComfyUI-RH-Bernini/examples/: bernini_ui_workflow.json
ComfyUI/custom_nodes/ComfyUI-RH-Bernini/web/js/: bernini_startup_workflow.js
custom_nodes/ComfyUI-RH-Bernini/: .gitignore  LICENSE  README.md  README_CN.md  __init__.py  bernini_patches.py  nodes_bernini.py  prompt_enhancer.py  pyproject.toml  requirements.txt
custom_nodes/ComfyUI-RH-Bernini/examples/: bernini_prompt_enhancer_api.json  bernini_ui_workflow.json
installer/: install_bernini_comfy.bat
tools/: download_models.py  install.ps1  launch.ps1  smoke_test.py
workflows/: Bernini_testing_video_edit_02.json
