[project]
name = "comfyui-rh-bernini"
description = "ComfyUI-native Bernini in-context conditioning for Wan 2.2 with external LLM prompt-enhancement helpers."
version = "260603.10.36"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "flybirdxx" }]
maintainers = [{ name = "flybirdxx" }]
dependencies = []

[project.urls]
Repository = "https://github.com/RH-RunningHub/ComfyUI-RH-Bernini"
Author = "https://github.com/flybirdxx"
Upstream = "https://github.com/bytedance/Bernini"
ComfyUI_PR = "https://github.com/Comfy-Org/ComfyUI/pull/14216"
Models = "https://huggingface.co/ByteDance/Bernini"

[tool.comfy]
PublisherId = "gluttony10"
DisplayName = "ComfyUI-RH-Bernini"
Icon = ""
includes = ["examples"]
